add animation in single.html

--- a/single.html
+++ b/single.html
@@ -67,14 +67,14 @@
         <!-- End Breadcrumbs -->
 
         <!-- Description -->
-        <div class="container">
+        <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
                 <div class="col-lg-9">
                     <img src="assets/image/promote.png" style="transform: scaleX(-1)" class="w-100" />
                 </div>
             </div>
         </div>
-        <section class="description">
+        <section class="description" data-aos="fade-up" data-aos-delay="150">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -96,7 +96,7 @@
         <!-- End Description -->
 
         <!-- Spesification -->
-        <section class="spesification">
+        <section class="spesification" data-aos="fade-up">
             <div class="container">
                 <div class="row text-uppercase text-center mt-5">
                     <div class="col">
