Add dynamic image view in product

--- a/products.html
+++ b/products.html
@@ -69,9 +69,14 @@
         <section class="header" data-aos="zoom-in">
             <div class="container">
                 <div class="row">
-                    <div class="tagline col text-center">
-                        <h1 class="text-uppercase">FInd the best deals for you</h1>
-                        <p>Pilihan produk spesial dari kami yang cocok untuk kebutuhan anda</p>
+                    <div class="col-6">
+                        <div class="tagline col">
+                            <h1 class="text-uppercase">Find the best deals for you</h1>
+                            <p>Pilihan produk spesial dari kami yang cocok untuk kebutuhan anda</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img class="w-100" src="assets/image/products/1.png" id="heroImage" />
                     </div>
                 </div>
             </div>
@@ -83,7 +88,7 @@
             <div class="container">
                 <div class="row" data-aos="fade-up">
                     <div class="col">
-                        <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
+                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <button
                                     class="nav-link active"
@@ -134,7 +139,7 @@
                     <div class="tab-pane fade show active" id="pills-giga" role="tabpanel" aria-labelledby="pills-giga-tab" tabindex="0">
                         <div class="row">
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/1.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/1.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -148,7 +153,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/2.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/2.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -162,7 +167,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/3.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/3.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -176,7 +181,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/4.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/4.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -192,7 +197,7 @@
                         </div>
                         <div class="row">
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/1.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/1.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -206,7 +211,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/2.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/2.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -220,7 +225,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/3.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/3.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -234,7 +239,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/4.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/4.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -253,7 +258,7 @@
                     <div class="tab-pane fade" id="pills-elf" role="tabpanel" aria-labelledby="pills-elf-tab" tabindex="0">
                         <div class="row">
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/1.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/1.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -267,7 +272,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/2.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/2.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -281,7 +286,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/3.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/3.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -295,7 +300,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/4.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/4.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -314,7 +319,7 @@
                     <div class="tab-pane fade" id="pills-traga" role="tabpanel" aria-labelledby="pills-traga-tab" tabindex="0">
                         <div class="row">
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/1.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/1.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -328,7 +333,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/2.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/2.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -342,7 +347,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/3.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/3.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -356,7 +361,7 @@
                                 </figure>
                             </div>
                             <div class="col-6 col-sm-4 col-md-3">
-                                <figure class="figure">
+                                <figure class="figure" onmouseover="hoverProduct('assets/image/products/4.png')">
                                     <div class="figure-img">
                                         <img src="assets/image/products/4.png" class="figure-img img-fluid" />
                                         <a href="single.html" class="d-flex justify-content-center text-decoration-none">
@@ -425,6 +430,12 @@
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init();
+        </script>
+        <script>
+            function hoverProduct(imageSrc) {
+                const img = document.querySelector("#heroImage");
+                img.src = imageSrc;
+            }
         </script>
         <!-- End Script -->
     </body>
