--- a/admin/products.html
+++ b/admin/products.html
@@ -131,6 +131,16 @@
                 />
                 <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0" />
             </symbol>
+            <symbol id="pencil-fill" viewBox="0 0 16 16">
+                <path
+                    d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"
+                />
+            </symbol>
+            <symbol id="trash-fill" viewBox="0 0 16 16">
+                <path
+                    d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"
+                />
+            </symbol>
         </svg>
 
         <header class="navbar sticky-top bg-light flex-md-nowrap p-0 shadow" data-bs-theme="dark">
@@ -189,13 +199,13 @@
                         <div class="offcanvas-body d-md-flex flex-column px-2 pt-lg-3 overflow-y-auto">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="/admin/dashboard.html">
+                                    <a class="nav-link d-flex align-items-center gap-2" aria-current="page" href="/admin/dashboard.html">
                                         <svg class="bi"><use xlink:href="#house" /></svg>
                                         Dashboard
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link d-flex align-items-center gap-2" href="/admin/products.html">
+                                    <a class="nav-link d-flex align-items-center gap-2 active" href="/admin/products.html">
                                         <svg class="bi"><use xlink:href="#cart" /></svg>
                                         Products
                                     </a>
@@ -226,7 +236,12 @@
                     <div
                         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom text-uppercase"
                     >
-                        <h1>Overview</h1>
+                        <h1>Products</h1>
+
+                        <button type="button" class="btn btn-danger d-flex align-items-center gap-2">
+                            <svg class="bi"><use xlink:href="#plus-circle" /></svg>
+                            Add New Product
+                        </button>
                     </div>
 
                     <h4>Product Lists</h4>
@@ -246,10 +261,18 @@
                                     <td>random</td>
                                     <td>data</td>
                                     <td>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary d-flex align-items-center gap-2">
-                                            <svg class="bi"><use xlink:href="#eye" /></svg>
-                                            View
-                                        </button>
+                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+                                            <div class="btn-toolbar mb-2 mb-md-0">
+                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
+                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
+                                                    Edit
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
+                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
+                                                    Delete
+                                                </button>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -257,10 +280,18 @@
                                     <td>placeholder</td>
                                     <td>irrelevant</td>
                                     <td>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary d-flex align-items-center gap-2">
-                                            <svg class="bi"><use xlink:href="#eye" /></svg>
-                                            View
-                                        </button>
+                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+                                            <div class="btn-toolbar mb-2 mb-md-0">
+                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
+                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
+                                                    Edit
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
+                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
+                                                    Delete
+                                                </button>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -268,10 +299,18 @@
                                     <td>data</td>
                                     <td>rich</td>
                                     <td>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary d-flex align-items-center gap-2">
-                                            <svg class="bi"><use xlink:href="#eye" /></svg>
-                                            View
-                                        </button>
+                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+                                            <div class="btn-toolbar mb-2 mb-md-0">
+                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
+                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
+                                                    Edit
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
+                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
+                                                    Delete
+                                                </button>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -279,10 +318,18 @@
                                     <td>information</td>
                                     <td>placeholder</td>
                                     <td>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary d-flex align-items-center gap-2">
-                                            <svg class="bi"><use xlink:href="#eye" /></svg>
-                                            View
-                                        </button>
+                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+                                            <div class="btn-toolbar mb-2 mb-md-0">
+                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
+                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
+                                                    Edit
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
+                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
+                                                    Delete
+                                                </button>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -290,10 +337,18 @@
                                     <td>text</td>
                                     <td>random</td>
                                     <td>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary d-flex align-items-center gap-2">
-                                            <svg class="bi"><use xlink:href="#eye" /></svg>
-                                            View
-                                        </button>
+                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+                                            <div class="btn-toolbar mb-2 mb-md-0">
+                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
+                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
+                                                    Edit
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
+                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
+                                                    Delete
+                                                </button>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -301,10 +356,18 @@
                                     <td>dashboard</td>
                                     <td>irrelevant</td>
                                     <td>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary d-flex align-items-center gap-2">
-                                            <svg class="bi"><use xlink:href="#eye" /></svg>
-                                            View
-                                        </button>
+                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+                                            <div class="btn-toolbar mb-2 mb-md-0">
+                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
+                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
+                                                    Edit
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
+                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
+                                                    Delete
+                                                </button>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                             </tbody>
