--- a/admin/add_product.html
+++ b/admin/add_product.html
@@ -236,143 +236,10 @@
                     <div
                         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom text-uppercase"
                     >
-                        <h1>Products</h1>
-
-                        <a type="button" class="btn btn-danger d-flex align-items-center gap-2" href="/admin/add_product.html">
-                            <svg class="bi"><use xlink:href="#plus-circle" /></svg>
-                            Add New Product
-                        </a>
+                        <h1>Add New Products</h1>
                     </div>
 
-                    <h4>Product Lists</h4>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-lg">
-                            <thead>
-                                <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Product Name</th>
-                                    <th scope="col">Description</th>
-                                    <th scope="col"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1,001</td>
-                                    <td>random</td>
-                                    <td>data</td>
-                                    <td>
-                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
-                                            <div class="btn-toolbar mb-2 mb-md-0">
-                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
-                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
-                                                    Edit
-                                                </button>
-                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
-                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
-                                                    Delete
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>1,002</td>
-                                    <td>placeholder</td>
-                                    <td>irrelevant</td>
-                                    <td>
-                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
-                                            <div class="btn-toolbar mb-2 mb-md-0">
-                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
-                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
-                                                    Edit
-                                                </button>
-                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
-                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
-                                                    Delete
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>1,003</td>
-                                    <td>data</td>
-                                    <td>rich</td>
-                                    <td>
-                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
-                                            <div class="btn-toolbar mb-2 mb-md-0">
-                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
-                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
-                                                    Edit
-                                                </button>
-                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
-                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
-                                                    Delete
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>1,003</td>
-                                    <td>information</td>
-                                    <td>placeholder</td>
-                                    <td>
-                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
-                                            <div class="btn-toolbar mb-2 mb-md-0">
-                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
-                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
-                                                    Edit
-                                                </button>
-                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
-                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
-                                                    Delete
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>1,004</td>
-                                    <td>text</td>
-                                    <td>random</td>
-                                    <td>
-                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
-                                            <div class="btn-toolbar mb-2 mb-md-0">
-                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
-                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
-                                                    Edit
-                                                </button>
-                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
-                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
-                                                    Delete
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>1,005</td>
-                                    <td>dashboard</td>
-                                    <td>irrelevant</td>
-                                    <td>
-                                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
-                                            <div class="btn-toolbar mb-2 mb-md-0">
-                                                <button type="button" class="btn btn-sm btn-warning d-flex align-items-center gap-2 me-2">
-                                                    <svg class="bi"><use xlink:href="#pencil-fill" /></svg>
-                                                    Edit
-                                                </button>
-                                                <button type="button" class="btn btn-sm btn-danger d-flex align-items-center gap-2">
-                                                    <svg class="bi"><use xlink:href="#trash-fill" /></svg>
-                                                    Delete
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                    
                 </main>
             </div>
         </div>
